# MetaHackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  demo_episode.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-llm.txt  requirements.txt  submission.txt
curriculum_results/: buffer.json  summary.json
curriculum_results/scenarios/: evolved_0000_048610d10c.yaml  evolved_0001_823796c06b.yaml  evolved_0002_516316e0e5.yaml  evolved_0003_ce9349227d.yaml  evolved_0004_63fa0016a2.yaml  (+195 more)
docs/: ROUND2_SUMMARY.md  UNSLOTH_GRPO_RUNBOOK.md
notebooks/: 01_smoke_test.ipynb  02_train_grpo_unsloth.ipynb  03_eval_baseline_vs_trained.ipynb  04_kaggle_qwen3b_grpo.ipynb  05_kaggle_spice_selfplay.ipynb
remote_results/: summary.json
scenarios_seed/: seed_cache_stampede.yaml  seed_cert_expiry.yaml  seed_dns_misconfiguration.yaml  seed_easy_memory_leak.yaml  seed_http_503_loop.yaml  seed_replica_lag.yaml
scripts/: evaluate_redshift_policy.py  llm_attacker.py  remote_redshift_run.py  run_autocurriculum.py  run_kaggle_qwen3b_grpo.sh  run_spice_selfplay.sh  run_unsloth_grpo_screen.sh  spice_defender.py  train_redshift_policy.py  train_spice_selfplay.py  train_unsloth_grpo.py  validate.sh
server/: __init__.py  app.py
tests/: test_curriculum.py  test_docker_build.sh  test_env_api.py  test_llm_attacker.py  test_notebooks.py  test_openenv_validate.sh  test_rubrics.py  test_simulator.py
v1_legacy/: app.py  graders.py  inference.py  run_simulation.py  scenarios.py  test_env.py
(+34 files in other folders)
