[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "oncall-env"
version = "1.0.0"
description = "OnCallEnv Red Shift: self-play SRE incident response environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "openai>=1.6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "oncallenv.server.app:main"

[tool.setuptools.packages.find]
where = ["src"]
